implemented handling of only one start or end time param provided
